--- a/lisn/src/main/res/drawable/layout_border.xml
+++ b/lisn/src/main/res/drawable/layout_border.xml
@@ -1,10 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<!--<shape xmlns:android="http://schemas.android.com/apk/res/android">-->
 
-    <solid android:color="@color/colorBgStoreBook" />
+    <!--<solid android:color="@color/colorBgStoreBook" />-->
 
-    <stroke android:width="2dip" android:color="#B1BCBE" />
-    <corners android:radius="2dip"/>
-    <padding android:left="0dip" android:top="0dip" android:right="0dip" android:bottom="1dip" />
+    <!--<stroke android:width="2dip" android:color="#B1BCBE" />-->
+    <!--<corners android:radius="2dip"/>-->
+    <!--<padding android:left="0dip" android:top="0dip" android:right="0dip" android:bottom="1dip" />-->
 
-</shape>
+<!--</shape>-->
+
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+<item>
+    <shape android:shape="rectangle">
+        <solid android:color="#CABBBBBB"/>
+        <corners android:radius="2dp" />
+    </shape>
+</item>
+
+<item
+    android:left="0dp"
+    android:right="1dp"
+    android:top="0dp"
+    android:bottom="1dp">
+    <shape android:shape="rectangle">
+        <solid android:color="@android:color/white"/>
+        <corners android:radius="2dp" />
+    </shape>
+</item>
+</layer-list>
