--- a/lisn/src/main/res/layout/activity_main.xml
+++ b/lisn/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="audio.lisn.activity.MainActivity"
-    android:background="@color/windowBackground"
+    android:background="@color/colorPrimary"
     tools:ignore="MergeRootFrame" >
 
     <ImageView
