--- a/lisn/src/main/res/layout/activity_player_controller.xml
+++ b/lisn/src/main/res/layout/activity_player_controller.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:coverflow="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
@@ -31,12 +31,35 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         >
 
+
+        <it.moondroid.coverflow.components.ui.containers.FeatureCoverFlow
+            android:id="@+id/coverflow"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_alignParentTop="true"
+            coverflow:coverHeight="@dimen/cover_height"
+            coverflow:coverWidth="@dimen/cover_width"
+            coverflow:maxScaleFactor="1.2"
+            coverflow:reflectionGap="0px"
+            coverflow:rotationThreshold="0.5"
+            coverflow:scalingThreshold="0.5"
+            coverflow:spacing="0.5"
+           />
+
+        <TextSwitcher
+            android:id="@+id/play_book_title"
+            android:layout_below="@+id/coverflow"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="10dp"
+            android:layout_centerVertical="true" />
         <LinearLayout
             android:id="@+id/audio_player_layout"
-            android:layout_below="@+id/closePlayButton"
+            android:layout_below="@+id/play_book_title"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+
             >
             <TextView
                 android:id="@+id/musicCurrentLoc"
