--- a/lisn/src/main/res/layout/store_book_view.xml
+++ b/lisn/src/main/res/layout/store_book_view.xml
@@ -21,8 +21,8 @@
     <ImageView
         android:id="@+id/book_cover_thumbnail"
         android:layout_margin="@dimen/book_item_margin"
-        android:layout_width="90dp"
-        android:layout_height="120dp"
+        android:layout_width="@dimen/cover_width"
+        android:layout_height="@dimen/cover_height"
         android:layout_centerHorizontal="true"/>
     <ImageButton
         android:id="@+id/playButton"
