--- a/lisn/src/main/res/values/dimens.xml
+++ b/lisn/src/main/res/values/dimens.xml
@@ -34,6 +34,8 @@
     <dimen name="status_bar_height">25dp</dimen>
     <dimen name="fab_compat_margin">0dp</dimen>
 
+    <dimen name="cover_width">90dp</dimen>
+    <dimen name="cover_height">120dp</dimen>
 
     
 </resources>
