--- a/lisn/src/main/res/layout/activity_audio_book_detail.xml
+++ b/lisn/src/main/res/layout/activity_audio_book_detail.xml
@@ -61,19 +61,67 @@
 
             <LinearLayout
                 android:id="@+id/top_layout"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/bookCoverImage"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:scaleType="centerCrop"
-                    android:fitsSystemWindows="true"
-                    app:layout_collapseMode="parallax"/>
+                <RelativeLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+                    <ImageView
+                        android:id="@+id/bookCoverImage"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:scaleType="centerCrop"
+                        android:fitsSystemWindows="true"
+                        app:layout_collapseMode="parallax"/>
+                    <ImageButton
+                        android:id="@+id/previewPlayButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="@android:color/transparent"
+                        android:src="@drawable/btn_play_start"
+                        android:layout_marginTop="110dp"
+                        android:layout_centerHorizontal="true" />
+                    <RelativeLayout
+                        android:id="@+id/preview_layout"
+                        android:layout_margin="@dimen/book_item_margin"
+                        android:layout_width="90dp"
+                        android:layout_height="120dp"
+                        android:layout_centerHorizontal="true"
+                        android:orientation="vertical"
+                        android:visibility="invisible"
+                        android:background="@color/color_transparent_alpha_0.8"
+                        >
+                        <TextView
+                            android:id="@+id/preview_label"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="20dp"
+                            android:text="Preview"
+                            android:textColor="@color/windowBackground"
+                            android:layout_centerHorizontal="true"
+                            android:textSize="15sp" />
+                        <ProgressBar
+                            android:id="@+id/progressBar"
+                            style="?android:attr/progressBarStyleSmall"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            />
+
+                        <TextView
+                            android:id="@+id/time_label"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/windowBackground"
+                            android:layout_centerInParent="true"
+                            android:textSize="20sp" />
+                    </RelativeLayout>
+    </RelativeLayout>
+
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
                     <TextView
