--- a/lisn/src/main/res/layout/activity_home.xml
+++ b/lisn/src/main/res/layout/activity_home.xml
@@ -46,23 +46,12 @@
 
 
     <android.support.design.widget.NavigationView
-        android:id="@+id/navigation_member"
+        android:id="@+id/navigation_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         app:headerLayout="@layout/drawer_header"
-        android:visibility="gone"
         app:menu="@menu/navigation_menu_member"/>
-    <android.support.design.widget.NavigationView
-        android:id="@+id/navigation_none_member"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        app:headerLayout="@layout/drawer_header"
-        android:visibility="gone"
-        app:menu="@menu/navigation_menu_none_member"/>
-
-
 
 </android.support.v4.widget.DrawerLayout>
 
