--- a/lisn/src/main/res/menu/navigation_menu_member.xml
+++ b/lisn/src/main/res/menu/navigation_menu_member.xml
@@ -16,7 +16,8 @@
   -->
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <group
+        android:checkableBehavior="single">
     <item
         android:id="@+id/drawer_home"
         android:checked="true"
@@ -40,5 +41,6 @@
         android:id="@+id/drawer_about_us"
         android:icon="@drawable/ic_settings_black_24dp"
         android:title="@string/action_about_us"/>
+    </group>
 
 </menu>
