--- a/lisn/src/main/res/menu/navigation_menu_none_member.xml
+++ b/lisn/src/main/res/menu/navigation_menu_none_member.xml
@@ -17,7 +17,8 @@
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-
+    <group
+        android:checkableBehavior="single">
     <item
         android:id="@+id/drawer_store"
         android:icon="@drawable/ic_settings_black_24dp"
@@ -31,5 +32,5 @@
         android:id="@+id/drawer_about_us"
         android:icon="@drawable/ic_settings_black_24dp"
         android:title="@string/action_about_us"/>
-
+</group>
 </menu>
